@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: bmc-watchdog.8.in,v 1.11 2006-06-06 21:17:25 chu11 Exp $
+\."$Id: bmc-watchdog.8.in,v 1.12 2006-07-29 13:55:03 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2004 The Regents of the University of California.
 \."  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -118,10 +118,16 @@ line, only the specific options for that command will be listed.
 .B  -v, --version
 Output the program version.
 .TP
-.B  -o INT, --io-port=INT
-Identify the System Base Address for KCS SMS/IO.  If not specified, 
+.B  -I STRING, --driver-type=STRING
+Identify the IPMI driver type to use.  The available driver types are
+KCS and SSIF.  If not specified,
+.B bmc-watchdog
+will attempt both.
+.TP
+.B  -o INT, --driver-address=INT
+Identify the System Base Address for the IPMI Driver.  If not specified, 
 .B bmc-watchdog 
-will attempt to probe for the system's default io-port.  If the probe
+will attempt to probe for the system's default address.  If the probe
 fails, the IPMI defined default will be used.  If the io-port number
 is prefixed with a "0x", it is assumed to be a base 16 integer.
 Otherwise, it is assumed to be a base 10 integer.
@@ -131,6 +137,10 @@ Specify base address register spacing. If not specified,
 .B bmc-watchdog 
 will attempt to probe for the system's default register spacing.  If
 the probe fails, the IPMI defined default will be used.
+.TP
+.B  -E STRING, --driver-device=STRING
+Identify the driver device path the IPMI driver should use.  It not
+specified, a default path will be assumed.
 .TP
 .B  -f STRING, --logfile=STRING
 Specify an alternate logfile from the default of
